syntax = "proto3";

option java_package = "cn.wj.android.cashbook.core.datastore";
option java_multiple_files = true;

/* 应用相关配置 */
message AppPreferences {
  sint64 currentBookId = 1; // 当前使用的账本 id
  sint64 defaultTypeId = 2; // 默认类型 id
  sint64 lastAssetId = 3; // 上一次使用资产 id
}